# PortfolioBuddy

./: README.md  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
agents/: investment_agent.py  llm_client.py  orchisteration.py  tradding_agent.py
chroma_data/: chroma.sqlite3
core/: auth.py
memory/: chroma_client.py  embeddings.py
models/: conversation.py  portfolio.py  trading.py  users.py
routers/: agent_router.py  auth_router.py  trading_router.py
services/: angel_one_service.py
tools/: market_tool.py  news_tools.py  vector_tools.py
