[project]
name = "portfoliobuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "sentence-transformers>=5.5.1",
    "vadersentiment>=3.3.2",
    "yfinance>=1.4.1",
]
