[project]
name = "portfoliobuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "openai>=2.40.0",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.48.0",
    "vadersentiment>=3.3.2",
    "yfinance>=1.4.1",
    "asyncpg>=0.31.0",
    "python-jose>=3.5.0",
    "pydentic>=0.0.1.dev3",
]
